# rust-api

./: .gitignore  LICENSE  README.md  Rust API.postman_collection.json  docker-compose.yaml
api/: .env.example  Cargo.toml  Dockerfile
api/migrations/2022-03-02-130610_users/: up.sql
api/migrations/2022-03-02-150254_car_brands/: down.sql  up.sql
api/migrations/2022-03-02-150740_car_transmission_types/: down.sql  up.sql
api/migrations/2022-03-02-150806_car_models/: down.sql  up.sql
api/migrations/2022-03-02-150818_user_cars/: down.sql  up.sql
api/migrations/2022-03-02-150836_banks/: down.sql  up.sql
api/migrations/2022-03-02-150856_bank_card_types/: down.sql  up.sql
api/migrations/2022-03-02-150913_bank_card_brands/: down.sql  up.sql
api/migrations/2022-03-02-150921_bank_cards/: down.sql  up.sql
api/migrations/2022-03-02-150932_user_bank_cards/: down.sql  up.sql
api/migrations/2022-03-04-082617_car_info/: down.sql  up.sql
api/migrations/2022-03-04-085626_bank_card_info/: down.sql  up.sql
api/src/: db.rs  jwt.rs  main.rs  schema.rs
api/src/controllers/: bank.rs  car.rs  mod.rs  user.rs
api/src/models/: bank.rs  car.rs  mod.rs  user.rs
api/src/utils/: catcher.rs  error.rs  response.rs
db/: Dockerfile  init.sql
db/conf.d/: my.cnf
nginx/: nginx.conf
nginx/conf.d/: rust-api.loc.conf
