[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
authors = ["bmuradashvili <berdiamuradashvili@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
jsonwebtoken = "8"
bcrypt = "0.12"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[dependencies.diesel]
version = "1.4.4"
features = ["mysql", "chrono", "numeric"]

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.bigdecimal]
version = "0.1.0"
features = ["serde"]